# Shanghan-Hermes

./: .gitignore  README.md  pyproject.toml
data/shanghan/: tool_specs.json
docs/: AGENT_ROADMAP.md  HARNESS.md  LLM_AGENT.md  MATURITY.md  PLATFORM.md  TEST_REPORT.md  TRACE.md  WEB_UI.md
hermes_shanghan/: cli.py  config.py  domains.py  lexicon.py  orchestrator.py  safety.py  schemas.py  textutil.py
hermes_shanghan/agent/: __init__.py  agent.py  citation_guard.py  complex_agent.py  evidence_binder.py  multi_agent.py  planner.py  research_loop.py  session.py  tools.py
hermes_shanghan/apps/: differential_audit.py  doctor.py  herbal.py  patient.py  research.py
hermes_shanghan/corpus/: downloader.py  library.py  segmenter.py
hermes_shanghan/eval/: runner.py
hermes_shanghan/extract/: entities.py  initial_rules.py  llm_extractor.py
hermes_shanghan/induce/: differential.py  formula_patterns.py  relations.py
hermes_shanghan/integrations/: AGENTS.md  mcp_server.py  tool_specs.py
hermes_shanghan/llm/: cache.py  client.py  config.py  prompts.py  providers.py
hermes_shanghan/memory/: store.py
hermes_shanghan/paper/: charts.py  writer.py
hermes_shanghan/rag/: clause_rag.py
hermes_shanghan/review/: critic.py  pipeline.py  repair.py  validators.py
hermes_shanghan/server/: http_server.py  policy.py  service.py
notebooks/: Hermes_Shanghanlun_Colab.ipynb
tests/: test_apps_and_rag.py  test_console.py  test_corpus.py  test_deep_research.py  test_eval.py  test_harness.py  test_invariants.py  test_library.py  test_llm_agent.py  test_model_layers.py  test_new_tools.py  test_paper_llm.py  test_refinements.py  test_server.py  test_trace.py
(+271 files in other folders)
